GNOME Bugzilla – Bug 749233
fdsrc: docs: fix and update documentation
Last modified: 2015-05-12 09:17:36 UTC
Update example to use gst-launch-1.0 and fix a paragraph.
Created attachment 303221 [details] [review] fdsrc: docs: fix and update documentation
Thanks, pushed: commit aafce9bea1d291d26c4eceaee1e7baac295b6a03 Author: Víctor Manuel Jáquez Leal <vjaquez@igalia.com> Date: Mon May 11 17:14:50 2015 +0200 fdsrc: docs: fix and update documentation Update example to use gst-launch-1.0 and fix a paragraph. https://bugzilla.gnome.org/show_bug.cgi?id=749233